<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
	android:layout_margin="@dimen/activity_horizontal_margin"
    android:orientation="vertical"
    android:background="#e0ffffff">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/tab_tv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TabItemStyle"
            android:text="@string/tab_item_mood_str" />

        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#aaa"/>

        <TextView
            android:id="@+id/tab_tv2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TabItemStyle"
            android:text="@string/tab_item_medi_str" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#aaa"/>

        <TextView
            android:id="@+id/tab_tv3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TabItemStyle"
            android:text="@string/tab_item_medi_notice_str" />
        <View
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:background="#aaa"/>

        <TextView
            android:id="@+id/tab_tv4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/TabItemStyle"
            android:text="@string/tab_item_quit_str" />
    </LinearLayout>

</LinearLayout>