<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/fragment_eat_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    style="@style/ActivityMarginStyle" >

   <TextView
        android:id="@+id/eat_tv_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/eat_layout_title"
        style="@style/FragmentFormTextTitleSytle"/>

    <TextView

        android:id="@+id/eat_tv_title_description"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/eat_layout_title_description"
        style="@style/FragmentFormTextTitleDesSytle"
        android:layout_marginTop="20dp"
        android:layout_below="@+id/eat_tv_title"
        android:layout_centerHorizontal="true"
        android:gravity="right"/>

    <LinearLayout
        android:id="@+id/eat_lay_shucai"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/eat_tv_title_description">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat_layout_vegatable"
            style="@style/FragmentFormTextSytle"/>
        <EditText
            android:id="@+id/eat_et_shucai"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/MyEditStyle"/>
    </LinearLayout>
    <LinearLayout 
        android:id="@+id/eat_lay_roulei"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/eat_lay_shucai">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat_layout_meat"
            style="@style/FragmentFormTextSytle"/>
        <EditText 
            android:id="@+id/eat_et_roulei"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/MyEditStyle"/>
    </LinearLayout>

     <LinearLayout 
        android:id="@+id/eat_lay_zhushi"
        android:layout_marginTop="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/eat_lay_roulei">
        <TextView 
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eat_layout_crop"
            style="@style/FragmentFormTextSytle"/>
        <EditText 
            android:id="@+id/eat_et_zhushi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            style="@style/MyEditStyle"/>
    </LinearLayout>
    
     <Button
         android:id="@+id/eat_but_dismiss"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/button_transparent"
         android:text="@string/eat_layout_result"
         android:textColor="@color/white"
         android:textSize="@dimen/text_size_media"
         android:layout_marginTop="20dp"
         android:layout_below="@+id/eat_lay_zhushi"
         style="@style/ActivityMarginStyle"/>
</RelativeLayout>