<LinearLayout
    android:id="@+id/save_drug_layout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/titlebar_layout"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        layout="@layout/title_bar"
        android:layout_alignParentTop="true"/>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="60dp">

        <LinearLayout
            android:id="@+id/sd_lay_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_save_drug_name_str"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_size_media"/>
            <EditText
                android:id="@+id/sd_et_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="13"
                style="@style/MyEditStyle_gray"/>
        </LinearLayout>

         <LinearLayout
            android:id="@+id/sd_lay_produce_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sd_lay_name"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView

                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_save_drug_produce_time"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_size_media"/>
            <EditText
                android:id="@+id/sd_et_year"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                style="@style/MyEditStyle_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_save_year"
                android:layout_marginRight="@dimen/element_horizontal_margin"
                android:textSize="@dimen/text_size_media"/>
            <EditText
                android:id="@+id/sd_et_month"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                style="@style/MyEditStyle_gray"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_save_month"
                android:textSize="@dimen/text_size_media"/>

        </LinearLayout>
        <LinearLayout
            android:id="@+id/sd_lay_guarantee_period"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/sd_lay_produce_time"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/drug_save_guarantee_period"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:textSize="@dimen/text_size_media"/>
            <EditText
                android:id="@+id/sd_et_baozhiqi"
                android:layout_width="50dp"
                android:inputType="number"
                android:layout_height="wrap_content"
                style="@style/MyEditStyle_gray"/>
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="@string/drug_save_month_num"

                 android:textSize="@dimen/text_size_media"/>
        </LinearLayout>

        <Button
            android:id="@+id/sd_but_submit"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/drug_save_submit"
            android:textSize="@dimen/text_size_media"
            android:layout_marginBottom="80dp"
            android:layout_alignParentBottom="true"
            android:background="@drawable/button_transparent_black_bound"
            style="@style/ActivityMarginStyle"/>
    </RelativeLayout>

</LinearLayout>